--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -107,7 +107,7 @@
             <ul>
                 <li> 
                   <h4 class="header_h">Hello there!</h4>
-                    <p class="header_p"> Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Sed non nisl non massa pharetra ornare.</p>
+                    <p class="header_p"> Tussify.  A revolutionary app designed to help students with test preparation.</p>
                 </li>
                      
             </ul>
@@ -130,8 +130,12 @@
         
             <div class="col_3">
                 <h3 class="title">Introduction</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a arcu non mi congue elementum. Suspendisse eu semper augue. Praesent luctus vehicula posuere. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam ut orci augue, a <a href="#">ullamcorper lorem</a>. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Sed non nisl non massa pharetra ornare.</p>
-                <p>Nullam ut orci augue, a <a href="#">ullamcorper lorem</a>. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Sed non nisl non massa pharetra ornare.</p>        
+                <p>Tussify is a revolutionary app developed to aid students for standardized test
+preparation. Students may practice and compete with their friends over problems. The
+goal is to spread knowledge through competition. Improve your ranking by doing well
+on quizzes. Every single question has been designed to stimulate your mind and is
+guaranteed to improve your test-taking skills.</p>
+                     
             </div>
             
             <div class="space"></div>
@@ -139,62 +143,26 @@
             <h3>How it Works</h3>
             
             <div class="col_1_box">
-                <h4>Lorem ipsum</h4>
-                <p>Quisque vestibulum, orci a erat pulvinar cursus, et ipsum lorem suscipit lectus.</p>
+        
+                <p>Each student creates a profile.  Practice real questions and compete against the best to gain points.  See who reigns in the quiz world.</p>
                 <%=image_tag('photos/preview_01.jpg')%>              
             </div> 
             
             <div class="col_1_box">
-                <h4>Consectetur</h4>
-                <p>Quisque vestibulum, orci erat a pulvinar cursus, et ipsum lorem suscipit lectus.</p>
+                <h4></h4>
+                <p>These questions have proven to be some of the toughest students face.</p>
                 <%=image_tag('photos/preview_02.jpg')%>
             </div>
             
             <div class="col_1_box_last">
-                <h4>Pellentesque</h4>
-                <p>Quisque vestibulum, orci erat a pulvinar cursus, et ipsum lorem suscipit lectus.</p>
+                <h4></h4>
+                <p>Enjoy!!!</p>
                 <%=image_tag('photos/preview_03.jpg')%>
             </div> 
             
     </div> <!--end main_content-->
        
-    <div id="sidebar">
-        
-      <div class="col_1_last">
-        <h3>Lorem Ipsum</h3>
-        <ul class="events"> 
-          <li>
-          <p class="date">Lorem Ipsum</p>
-          <p>Aenean quis metus ut ante porttit amet consectetur fringilla.</p>
-          <a href="#">Read all</a>
-          </li>
-          
-          <li>
-          <p class="date">Lorem Ipsum</p>
-          <p>Aenean quis metus ut ante porttit amet consectetur fringilla.</p>
-          <a href="#">Read all</a>
-          </li>
-          
-          <li>
-          <p class="date">Lorem Ipsum</p>
-          <p>Aenean quis metus ut ante porttit amet consectetur fringilla.</p>
-          <a href="#">Read all</a>        
-          </li>           
-        </ul>
-      </div>
-            
-            <div class="space"></div>
-            
-      <div class="col_1_last">
-        <h3>Lorem Ipsum</h3>
-        <ul class="menu"> 
-          <li>Lorem Ipsum</li>   
-          <li>Lorem Ipsum</li> 
-          <li>Lorem Ipsum</li>                           
-        </ul>
-      </div>            
-        
-    </div> <!--end sidebar-->
+    
   </div> <!--end main-->
 </div> <!--end main_wrap-->
 
