about page updates

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@ preparation. Students may practice and compete with their friends over problems.
 goal is to spread knowledge through competition. Improve your ranking by doing well
 on quizzes. Every single question has been designed to stimulate your mind and is
 guaranteed to improve your test-taking skills.</p> 
-                     		
+        </div>             		
           
         
          
@@ -16,28 +16,28 @@ guaranteed to improve your test-taking skills.</p>
         	<ul class="team">
             	<li>
                     <h5>Francis J. Hinson</h5>
-                    <img src="images/photos/image_01_thumb.jpg" alt="Dave"/>
+                    <%= image_tag("hinson.png") %>
                     <p>Francis, a Princeton native, is also a student at Lawrenceville. He has
 nurtured his interest in web development through multiple projects, the first one originating in 2011.
 He plans on continuing his study of computer programming in college.</p>
             	</li>
             	<li class="last">
                     <h5>Nick Cherukuri</h5>
-                    <img src="images/photos/image_04_thumb.jpg" alt="Suzan"/>
+                    <%= image_tag("chuki.png") %>
                     <p>Nick attends Lawrenceville as a day student from Cranbury, NJ. He enjoys
 studying business and politics. Nick is also an avid golf player with his favorite player being
 Tiger Woods. Nick hopes to expand to the mobile app market.</p>
             	</li>   
              	<li>
                     <h5>Jonathan Zhao</h5>
-                    <img src="images/photos/image_05_thumb.jpg" alt="Steve"/>
+                    <%= image_tag("zhao.png") %>
                     <p>Jon is 17 years old and from West Windsor, New Jersey. He has a wide range of
 interests including classical music (Mozart & Bach), debate, international economics (specifically, the inner workings and power struggles of Communist China), and golf. He has attended
 The Lawrenceville School for the past 4 years where he met Francis and Nick. </p>
             	</li>
             	<li class="last">
                     <h5>Miguel Bayona</h5>
-                    <img src="images/photos/image_06_thumb.jpg" alt="Monica"/>
+                    <%= image_tag("bayona.png") %>
                     <p>Mr. Bayona is a long time mathematics master at Lawrenceville. He is
 a veteran programmer and developer with multiple apps under his belt. He currently teacher Physics,
 Calculus, and Algebra.</p>
