--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -133,8 +133,8 @@
                 <p>Tussify is a revolutionary app developed to aid students for standardized test
 preparation. Students may practice and compete with their friends over problems. The
 goal is to spread knowledge through competition. Improve your ranking by doing well
-on quizzes. Every single question has been designed to stimulate your mind and is
-guaranteed to improve your test-taking skills.</p>
+on quizzes. Every single question has been designed to sharpen your mind and is
+guaranteed to improve your test-taking skills.  </p>
                      
             </div>
             
@@ -150,7 +150,7 @@ guaranteed to improve your test-taking skills.</p>
             
             <div class="col_1_box">
                 <h4></h4>
-                <p>These questions have proven to be some of the toughest students face.</p>
+                <p>These questions have proven to be some of the toughest students face.  If you can pass these questions, you are ready for anything.</p>
                 <%=image_tag('photos/preview_02.jpg')%>
             </div>
             
