--- a/app/views/pages/howitworks.html.erb
+++ b/app/views/pages/howitworks.html.erb
@@ -1,7 +1,7 @@
 <div id="main_wrap">
 <h2 class="title">How it Works</h2>
 	<h3>The ELO Ranking System</h3>
-		<div class='col_3'>
+		<div class='col_2'>
 			<p>Tussify presents a comprehensive ranking system for rating our user’s performances on quizzes. The
 			system is heavily based off of the ELO rating system as implemented by the US Chess Federation,
 			which is widely considered among the most statistically accurate ranking systems. It is also used by the
@@ -14,6 +14,18 @@
 			rating of the two users and calculate the likelihood that each of them will win. Depending on the actual
 			outcome of the round, the rating will change according to the ELO formula. If you would like to see the
 			actual formula we use for this here it is:</p> 
-		</div>		       
+		</div>	
+		
+		<div id='col_2_last'>
+		<%=image_tag('graph.png')%>	 
+		</div>      
+
+		
+		<%=image_tag('equation1.png')%>	<br>
+		
+		
+		
+		<%=image_tag('equation2.png')%>	
+			
 </div> 
         
