--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,47 +1,47 @@
 <div id="main_wrap">
-	<div id="main">
+    <div id="main">
     
-		<div class="col_1_3">
+        <div class="col_1_3">
             <h2 class="title">About Us</h2>
             <p>Tussify is a revolutionary app developed to aid students for standardized test
 preparation. Students may practice and compete with their friends over problems. The
 goal is to spread knowledge through competition. Improve your ranking by doing well
 on quizzes. Every single question has been designed to stimulate your mind and is
 guaranteed to improve your test-taking skills.</p> 
-        </div>             		
+        </div>                  
           
         
          
-  		<div class="col_2_3_last">
-        	<ul class="team">
-            	<li>
+        <div class="col_2_3_last">
+            <ul class="team">
+                <li>
                     <h5>Francis J. Hinson</h5>
-                   
+                    <%= image_tag("hinson.png") %>
                     <p>Francis, a Princeton native, is also a student at Lawrenceville. He has
 nurtured his interest in web development through multiple projects, the first one originating in 2011.
 He plans on continuing his study of computer programming in college.</p>
-            	</li>
-            	<li class="last">
+                </li>
+                <li class="last">
                     <h5>Nick Cherukuri</h5>
-                    
+                    <%= image_tag("chuki.png") %>
                     <p>Nick attends Lawrenceville as a day student from Cranbury, NJ. He enjoys
 studying business and politics. Nick is also an avid golf player with his favorite player being
 Tiger Woods. Nick hopes to expand to the mobile app market.</p>
-            	</li>   
-             	<li>
+                </li>   
+                <li>
                     <h5>Jonathan Zhao</h5>
-                    
+                    <%= image_tag("zhao.png") %>
                     <p>Jon is 17 years old and from West Windsor, New Jersey. He has a wide range of
 interests including classical music (Mozart & Bach), debate, international economics (specifically, the inner workings and power struggles of Communist China), and golf. He has attended
 The Lawrenceville School for the past 4 years where he met Francis and Nick. </p>
-            	</li>
-            	<li class="last">
+                </li>
+                <li class="last">
                     <h5>Miguel Bayona</h5>
                     <%= image_tag("bayona.png") %>
                     <p>Mr. Bayona is a long time mathematics master at Lawrenceville. He is
 a veteran programmer and developer with multiple apps under his belt. He currently teacher Physics,
 Calculus, and Algebra.</p>
-            	</li>                                
+                </li>                                
             </ul>         
         </div> 
         
