--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,7 +23,7 @@ He plans on continuing his study of computer programming in college.</p>
                 </li>
                 <li class="last">
                     <h5>Nick Cherukuri</h5>
-                    <%= image_tag("chuki.png") %>
+                    <%= image_tag("") %>
                     <p>Nick attends Lawrenceville as a day student from Cranbury, NJ. He enjoys
 studying business and politics. Nick is also an avid golf player with his favorite player being
 Tiger Woods. Nick hopes to expand to the mobile app market.</p>
