--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -33,7 +33,7 @@ Tiger Woods. Nick hopes to expand to the mobile app market.</p>
                     <%= image_tag("zhao.png") %>
                     <p>Jon is 17 years old and from West Windsor, New Jersey. He has a wide range of
 interests including classical music (Mozart & Bach), debate, international economics, and golf. He has attended
-The Lawrenceville School for the past 4 years where he met Francis and Nick. </p>
+The Lawrenceville School for the past 4 years where he met Francis and Nick. Go China</p>
                 </li>
                 <li class="last">
                     <h5>Miguel Bayona</h5>
