changed "teacher" to "teaches" grammatical sense

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -39,7 +39,7 @@ The Lawrenceville School for the past 4 years where he met Francis and Nick.</p>
                     <h5>Miguel Bayona</h5>
                     <%= image_tag("bayona.png") %>
                     <p>Mr. Bayona is a long time mathematics master at Lawrenceville. He is
-a veteran programmer and developer with multiple apps under his belt. He currently teacher Physics,
+a veteran programmer and developer with multiple apps under his belt. He currently teaches Physics,
 Calculus, and Algebra.</p>
                 </li>                                
             </ul>         
