--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,7 @@
 preparation. Students may practice and compete with their friends over problems. The
 goal is to spread knowledge through competition. Improve your ranking by doing well
 on quizzes. Every single question has been designed to stimulate your mind and is
-guaranteed to improve your test-taking skills.</p> 
+guaranteed to improve your test-taking skills. Truly revolutionary.</p> 
         </div>                  
           
         
